fix: [CDS-41907]: Overflowing last published version label fixed (#10619)
* fix: [CDS-41907]: Overflowing last published version label fixed

* fix: [CDS-41907]: minor change

--- a/src/framework/Templates/TemplateConfigModal/TemplateConfigModal.module.scss
+++ b/src/framework/Templates/TemplateConfigModal/TemplateConfigModal.module.scss
@@ -19,6 +19,10 @@
   .comment {
     max-height: 240px !important;
   }
+
+  .lastPublishedVersionLabel {
+    white-space: nowrap !important;
+  }
 }
 
 .closeIcon {
